--- a/index2.html
+++ b/index2.html
@@ -34,6 +34,7 @@
             background-color: aquamarine;
             margin: 5px;
             animation-name: b;
+            background-image:radial-gradient(pink,purple, blue);
         }
         .c{
             width: 20px;
@@ -41,6 +42,7 @@
             background-color: aquamarine;
             margin: 5px;
             animation-name: c;
+            background-image:radial-gradient(pink,purple, blue);
         }
         .d{
             width: 20px;
@@ -48,6 +50,7 @@
             background-color: aquamarine;
             margin: 5px;
             animation-name: d;
+            background-image:radial-gradient(pink,purple, blue);
         }
         .e{
             width: 20px;
@@ -55,6 +58,7 @@
             background-color: aquamarine;
             margin: 5px;
             animation-name: e;
+            background-image:radial-gradient(pink,purple, blue);
         }
         .f{
             width: 20px;
@@ -62,6 +66,7 @@
             background-color: aquamarine;
             margin: 5px;
             animation-name: f;
+            background-image:radial-gradient(pink,purple, blue);
         }
         .g{
             width: 20px;
@@ -69,6 +74,7 @@
             background-color: aquamarine;
             margin: 5px;
             animation-name: g;
+            background-image:radial-gradient(pink,purple, blue);
         }
         .h{
             width: 20px;
@@ -76,6 +82,7 @@
             background-color: aquamarine;
             margin: 5px;
             animation-name: h;
+            background-image:radial-gradient(pink,purple, blue);
         }
         .i{
             width: 20px;
@@ -83,6 +90,7 @@
             background-color: aquamarine;
             margin: 5px;
             animation-name: i;
+            background-image:radial-gradient(pink,purple, blue);
         }
         @keyframes a{
             from{
