--- a/index5.html
+++ b/index5.html
@@ -23,8 +23,8 @@
 </head>
 <body>
     <div class="container">
-        <a href="https://sumanth120.github.io/Transformers/index2.html">Music Bar</a>
-        <a href="https://sumanth120.github.io/Transformers/index4.html">Google Dots</a>
+        <a href="https://sumanth120.github.io/Transformers/index2.html" target="_blank">Music Bar</a>
+        <a href="https://sumanth120.github.io/Transformers/index4.html" target="_blank">Google Dots</a>
     </div>
 </body>
 </html>
